k8s/ingress-nginx/motthang-ga/master-ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitor-ingress-service
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    #cert-manager.io/cluster-issuer: "wildcard-cluster-issuer"
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    #nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx     
    ingress.kubernetes.io/rewrite-target: /     
    #nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($host = 'www.motthang.ga' ) {
        rewrite ^ https://motthang.ga$request_uri permanent;
        }
spec:
  rules:
  - host: www.motthang.ga
    http:
      paths:
      - backend:
          service:
            name: demo-nodejs-service
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: motthang.ga
    http:
      paths:
      - backend:
          service:
            name: demo-nodejs-service
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: develop.motthang.ga
    http:
      paths:
      - backend:
          service:
            name: demo-nodejs-develop-service
            port:
              number: 3000
        path: /
        pathType: Prefix
  - host: rancher.motthang.ga
    http:
      paths:
      - backend:
          service:
            name: rancher-service-external
            port:
              number: 80
        path: /
        pathType: Prefix
  # - host: motthang.ga
  #   http:
  #     paths:
  #     - path: /admin
  #       backend:
  #         service:
  #           name: django-cluster-ip-service
  #           port:
  #             number: 8000
  #       pathType: Prefix

  #     - path: /api
  #       backend:
  #         service:
  #           name: django-cluster-ip-service
  #           port:
  #             number: 8000
  #       pathType: Prefix
  #     - path: /static/admin/
  #       backend:
  #         service:
  #           name: static-assets-cluster-ip-service
  #           port:
  #             number: 8000
  #       pathType: Prefix
  #     - path: /static/rest_framework/
  #       backend:
  #         service:
  #           name: static-assets-cluster-ip-service
  #           port:
  #             number: 8000  
  #       pathType: Prefix        
  #     - path: /static/
  #       backend:
  #         service:
  #           name: react-cluster-ip-service
  #           port:
  #             number: 3000
  #       pathType: Prefix

  #     - path: /
  #       backend:
  #         service:
  #           name: demo-nodejs-service
  #           port:
  #             number: 3000
  #       pathType: Prefix
  #     - path: /static/
  #       backend:
  #         service:
  #           name: django-cluster-ip-service
  #           port:
  #             number: 8000
  #       pathType: Prefix        
  - host: monitor.motthang.ga
    http:
      paths:
      - backend:
          service:
            name: grafana-service-extenal
            port:
              number: 80
        path: /
        pathType: Prefix
  # - host: guestbook.motthang.ga
  #   http:
  #     paths:
  #     - backend:
  #         service:
  #           name: frontend
  #           port:
  #             number: 80
  #       path: /
  #       pathType: Prefix
  # - host: vote.motthang.ga
  #   http:
  #     paths:
  #     - backend:
  #         service:
  #           name: vote
  #           port:
  #             number: 5000
  #       path: /
  #       pathType: Prefix
  # - host: result.motthang.ga
  #   http:
  #     paths:
  #     - backend:
  #         service:
  #           name: result
  #           port:
  #             number: 5001
  #       path: /
  #       pathType: Prefix
  # - host: mongodb.motthang.ga
  #   http:
  #     paths:
  #     - backend:
  #         service:
  #           name: prometheus-service-extenal 
  #           port:
  #             number: 9090
  #       path: /
  #       pathType: Prefix
  tls:
  - hosts:
    - www.motthang.ga
    - motthang.ga
    - monitor.motthang.ga
    # - vpn.motthang.ga
    # - vote.motthang.ga
    # - result.motthang.ga
    # - guestbook.motthang.ga
    # - mongodb.motthang.ga
    - rancher.motthang.ga
    - develop.motthang.ga
    secretName: motthang.ga-certificate-secret
